--- a/glossary_sample.yml
+++ b/glossary_sample.yml
@@ -1,6 +1,6 @@
 version: 1                                              # the version of business glossary file config the config conforms to. Currently the only version released is `1`.
 source: DataHub                                         # the source format of the terms. Currently only supports `DataHub`
-owners:                                                 # owners contains two nested fields
+owners: puneet                                               # owners contains two nested fields
   users:                                                # (optional) a list of user IDs
     - datahub
   groups:                                               # (optional) a list of group IDs
@@ -10,9 +10,9 @@ url: "https://github.com/puneet664/test_dbt_qw"
 nodes:
 - name: Shipping                                                # name of the node
   description: Provides terms related to the shipping domain    # description of the node
-  owners:                                                       # (optional) owners contains 2 nested fields
+  owners: puneet1                                                 # (optional) owners contains 2 nested fields
     users:                                                      # (optional) a list of user IDs
-      - njones
+      - datahub
     groups:                                                     # (optional) a  list of group IDs
       - logistics
   knowledge_links:                                              # (optional) list of **KnowledgeCard** objects
