--- a/glossary_sample.yml
+++ b/glossary_sample.yml
@@ -1,4 +1,15 @@
-version: 1                                              # the version of business glossary file config the config conforms to. Currently the only version released is `1`.
+version: '1'                                              # the version of business glossary file config the config conforms to. Currently the only version released is `1`.
 source: DataHub                                         # the source format of the terms. Currently only supports `DataHub`
-owners: puneet                                               # owners contains two nested fields
-url: "https://github.com/puneet664/test_dbt_qw"
+owners: 'datahub'                                               # owners contains two nested fields
+  users:                                                # (optional) a list of user IDs
+    - 'datahub'
+  groups:                                               # (optional) a list of group IDs
+    - logistics
+url: "https://github.com/puneet664/test_dbt_qw" 
+
+nodes:
+- name: Shipping                                                # name of the node
+  description: Provides terms related to the shipping domain    # description of the node
+  knowledge_links:                                              # (optional) list of **KnowledgeCard** objects
+    - label: Wiki link for shipping
+      url: "https://en.wikipedia.org/wiki/Freight_transport"
