--- a/business_glossary.yaml
+++ b/business_glossary.yaml
@@ -23,7 +23,7 @@ nodes:
         description: Highly Confidential Data
         custom_properties:
           is_confidential: true
-        domain: Account
+        domain: Marketing
   - name: PersonalInformation
     description: All terms related to personal information
     owners:
@@ -77,7 +77,7 @@ nodes:
         knowledge_links:
           - url: "https://en.wikipedia.org/wiki/Address"
             label: Wiki link
-        domain: "urn:li:domain:Account"
+        domain: "urn:li:domain:83d32892-c8ee-4a5a-8f0b-77bdae600940"
     knowledge_links:
       - label: Wiki link for shipping
         url: "https://en.wikipedia.org/wiki/Freight_transport"
