--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'  # Replace with your Python version
+      - name: Install Pandas
+        run: |
+          python -m pip install pandas
+      - name: Install requests
+        run:
+           python -m pip install requests
  
       - name: Run Python Script
         run: python python_git_read.py  # Replace with your Python script name
