--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install requests
         run:
            python -m pip install requests
+      - name: install gitpython
+        run:
+           python -m pip install gitpython
  
       - name: Run Python Script
         run: python python_git_read.py  # Replace with your Python script name
