--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,15 +17,23 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'  # Replace with your Python version
-      - name: Install Pandas
-        run: |
-          python -m pip install pandas
-      - name: Install requests
-        run:
-           python -m pip install requests
-      - name: install gitpython
-        run:
-           python -m pip install gitpython
- 
-      - name: Run Python Script
-        run: python python_git_read.py  # Replace with your Python script name
+      
+      #- name: Install Pandas
+       # run: |
+         # python -m pip install pandas
+      #- name: Install requests
+       # run:
+         #  python -m pip install requests
+      #- name: install gitpython
+       # run:
+         #  python -m pip install gitpython
+       -name : install datahub python
+         run :
+              python -m pip install acryl-datahub
+       - name: run cmd commands
+         run: |
+           # Replace the below command with the installation of your CLI tool
+           # Example: Install 'my-tool' CLI tool
+           datahub ingest -c https://github.com/puneet664/test_dbt_qw/blob/main/recipe_gls.dhub.yaml
+     # - name: Run Python Script
+       # run: python python_git_read.py  # Replace with your Python script name
