--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -2,7 +2,7 @@ name: Ingest YAML Files
 
 jobs:
   ingest-yaml:
-    runs-on: ubuntu-latest  # Using Ubuntu for a wider range of tools
+    runs-on: windows-latest  # Using Ubuntu for a wider range of tools
  
     steps:
       - name: Checkout code
