--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -1,5 +1,8 @@
 name: Ingest YAML Files
-
+on:
+  push:
+    branches:
+      - main  # Trigger on pushes to the main branch (modify as needed)
 jobs:
   ingest-yaml:
     runs-on: windows-latest  # Using Ubuntu for a wider range of tools
