--- a/recipe_gls.dhub.yaml
+++ b/recipe_gls.dhub.yaml
@@ -1,7 +1,7 @@
 source:
     type: datahub-business-glossary
     config:
-        file: https://github.com/puneet664/test_dbt_qw/blob/main/nested_glossary_test.yaml
+        file: https://raw.githubusercontent.com/puneet664/test_dbt_qw/main/nested_glossary_test.yaml
         enable_auto_id: true
 sink:
     type: datahub-rest
