--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,32 @@
-
+name: Ingest YAML Files in datahub
+ 
+on:
+  push:
+    branches:
+      - main  # Trigger on pushes to the main branch (modify as needed)
+ 
+jobs:
+  ingest-yaml:
+    runs-on: ubuntu-latest
+ 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+ 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Replace with your Python version
+ 
+      - name: Install acryl-datahub
+        run: python -m pip install acryl-datahub  # Replace with the correct package name
+ 
+      - name: Fetch File from Private Repository
+        env:
+          GH_TOKEN: ${{ secrets.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}} # Using GitHub token for authentication
+        run: |
+          curl -H "Authorization: token $GH_TOKEN" -H "Accept: application/vnd.github.v3.raw" -o nested_glossary_test.yaml -L https://raw.githubusercontent.com/puneet664/test_dbt_qw/main/nested_glossary_test.yaml
+ 
+      - name: Ingest YAML using datahub
+        run: |
+          datahub ingest -c 
