--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main  # Replace with your branch name
-    paths:
-      - '**.xlsx' # Trigger when an Excel file is pushed
+    #paths:
+     # - '**.xlsx' # Trigger when an Excel file is pushed
  
 jobs:
   run-script:
