--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -22,6 +22,11 @@ jobs:
  
       - name: Run Python Script
         run: python python_git_read.py  # Replace with your Python script name
+      - name: Install pandas
+        run: |
+          python -m pip install pandas  # Replace with the correct package name
+          python -m pip install requests
+        #run: python -m pip install 
       - name: Commit files
         run: |
          git config --local user.email "action@github.com"
