--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -23,6 +23,7 @@ jobs:
       
       - name: Install pandas
         run: |
+          python -m pip install openpyxl
           python -m pip install pandas  # Replace with the correct package name
           python -m pip install requests
         #run: python -m pip install 
