--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -26,7 +26,7 @@ jobs:
           python -m pip install openpyxl
           python -m pip install pandas  # Replace with the correct package name
           python -m pip install requests
-          python -m pip install yaml
+          python -m pip install pyyaml
         #run: python -m pip install 
       - name: Run Python Script
         run: python python_git_read.py  # Replace with your Python script name
