--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -28,8 +28,13 @@ jobs:
           python -m pip install requests
           python -m pip install pyyaml
         #run: python -m pip install 
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Using GitHub token for authentication
+        run: |
+           curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }} " -o Data Taxonomy_workforce.xlsx -L https://github.com/puneet664/test_dbt_qw/blob/main/Data%20Taxonomy_workforce.xlsx
       - name: Run Python Script
-        run: python python_git_read.py  # Replace with your Python script name
+        run: python excel_to_json.py  # Replace with your Python script name
+      
       - name: Commit files
         run: |
          git config --local user.email "action@github.com"
