--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -20,18 +20,17 @@ jobs:
         with:
           python-version: '3.x'  # Replace with your Python version
  
-      
+      - env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Using GitHub token for authentication
+        run: |
       - name: Install pandas
         run: |
           python -m pip install openpyxl
           python -m pip install pandas  # Replace with the correct package name
           python -m pip install requests
           python -m pip install pyyaml
-        #run: python -m pip install 
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Using GitHub token for authentication
-        run: |
-           curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }} " -o Data Taxonomy_workforce.xlsx -L https://github.com/puneet664/test_dbt_qw/blob/main/Data%20Taxonomy_workforce.xlsx
+          #run: python -m pip install 
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }} " -o Data Taxonomy_workforce.xlsx -L https://github.com/puneet664/test_dbt_qw/blob/main/Data%20Taxonomy_workforce.xlsx
       - name: Run Python Script
         run: python excel_to_json.py  # Replace with your Python script name
       
