--- a/.github/workflows/ingest_yaml.yml
+++ b/.github/workflows/ingest_yaml.yml
@@ -48,7 +48,7 @@ jobs:
          git config --local user.email "action@github.com"
          git config --local user.name "GitHub Action"
  
-         git add glossary_new/nested_glossary_test.yml  # Stage the generated file within the existing folder
+         git add glossary_new/new_file.yml  # Stage the generated file within the existing folder
 
          git commit -m "Generated YAML from Excel"
          git push origin main
